--- a/html/editing/focus/sequential-focus-navigation-and-the-tabindex-attribute/focus-tabindex-zero-manual.html
+++ b/html/editing/focus/sequential-focus-navigation-and-the-tabindex-attribute/focus-tabindex-zero-manual.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<title>HTML Test: foucs - zero tabindex</title>
+<title>HTML Test: focus - zero tabindex</title>
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <link rel="help" href="http://www.w3.org/html/wg/drafts/html/CR/editing.html#sequential-focus-navigation-and-the-tabindex-attribute">
 <meta assert="flag" content="interact">
-<meta assert="assert" content="Check if the tabindex attribute controls an element is supposed to be focusable">
+<meta assert="assert" content="Check if the tabindex attribute controls whether an element is supposed to be focusable">
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 </head>
@@ -21,6 +21,7 @@
 </form>
 <script>
 
+//This test can be automated once we have an uniform way to use webdriver.
 var t = async_test("The element with a zero tabindex must be focused by press 'Tab' key");
 
 setup({timeout: 10000});
