--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
@@ -13,10 +13,10 @@
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
-				display:inline-block;
+				padding-top: 1px;
 				position:relative;
 				z-index: 1;
-				transform: transform 2s;
+				transition: transform 2s;
 
 			}
 			.parent:hover {
