--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform.html
@@ -14,7 +14,7 @@
 				background: aqua;/*rgb(0,255,255);*/
 				width: 140px;
 				height: 140px;
-				display:inline-block;
+				padding-top: 1px;
 				transform:rotateX(20deg);
 			}
 			.blended {
