--- a/html/semantics/embedded-content-0/the-img-element/img.complete.html
+++ b/html/semantics/embedded-content-0/the-img-element/img.complete.html
@@ -21,86 +21,69 @@
 
 <div id="log"></div>
 <script>
-  function testImgCompleteNoSrc(){
+  test(function() {
     assert_true(document.getElementById("imgTestTag").complete);
-  }
+  }, "img src omitted");
 
-  function testImgCompleteEmptySrc(){
+  test(function() {
     assert_true(document.getElementById("imgTestTag2").complete);
-  }
-
-  test(testImgCompleteNoSrc, "img src omitted");
-  test(testImgCompleteEmptySrc, "img src empty");
+  }, "img src empty");
 
   // test if set to true after img is completely available
   var t = async_test("async src complete test");
 
-  t.step(
-    function(){
+  t.step(function(){
     //build path to image file
     var path = document.location.pathname;
     var dir = path.substring(path.indexOf('/', 0)+1, path.lastIndexOf('/'));
-    var srcpath =  location.protocol + '//' + location.host + '/' + dir + '/3.jpg'
 
-    document.getElementById("imgTestTag3").src = srcpath;
+    document.getElementById("imgTestTag3").src = '3.jpg?nocache=' + Math.random();
 
     //test if img.complete is set to false if src is changed
-    function testImgCompleteChangeSrc(){
-      assert_false(document.getElementById("imgTestTag3").complete)
-    }
-    test(testImgCompleteChangeSrc,"src changed, should be set to false");
-
-    assert_equals(document.getElementById("imgTestTag3").src, srcpath);
+    assert_false(document.getElementById("imgTestTag3").complete, "src changed, should be set to false")
   });
 
-  document.getElementById("imgTestTag3").onload = t.step_func(
-    function(){
+  document.getElementById("imgTestTag3").onload = t.step_func(function(){
     assert_true(document.getElementById("imgTestTag3").complete);
     t.done();
   });
-
+</script>
+<script>
   // test: The final task that is queued by the networking task source once the resource has been fetched has been queued, but has not yet been run, and the img element is not in the broken state
   async_test(function(t) {
-    imageInstance.src = 'image-1.jar';
-    if(imageInstance.complete == false) {
-      imageInstance.src = 'image-1.jpg';
+    imageInstance.src = 'image-1.jpg?pipe=trickle(d1)&nocache=' + Math.random(); // make sure the image isn't in cache
 
-      imageInstance.onLoad = t.step_func(function() {
-        var startTime = Date.now();
-        while((Date.now() - startTime) < 2000) {
-          //keep spinning
-        }
-
-        assert_true(imageInstance.complete, 'Image resource has been fetched but not run yet & image is not in the broken state');
-      });
-      t.done();
+    assert_false(imageInstance.complete, "imageInstance.complete should be false");
+    var startTime = Date.now(); 
+    while (true) { 
+      if (Date.now() - startTime > 5000) 
+        assert_unreached('.complete didn\'t change to true');
+      if (imageInstance.complete === true) break;
     }
+    t.done();
   },
   'IDL attribute complete returns true when image resource has been fetched but not run yet & image is not in broken state');
-
+</script>
+<script>
   // test if broken img does not pass
   var t2 = async_test("async src broken test");
+  var img4 = document.getElementById("imgTestTag4");
 
   t2.step(
     function(){
     //build path to image file
     var path = document.location.pathname;
     var dir = path.substring(path.indexOf('/', 0)+1, path.lastIndexOf('/'));
-    var srcpath =  location.protocol + '//' + location.host + '/' + dir + '/brokenimg.ogg'
 
-    document.getElementById("imgTestTag4").src = srcpath;
+    img4.src = 'brokenimg.jpg';
 
     //test if img.complete is set to false if src is changed
-    assert_false(document.getElementById("imgTestTag4").complete, "tsrc changed to broken img, should be set to false");
-
-    assert_equals(document.getElementById("imgTestTag4").src, srcpath);
+    assert_false(img4.complete, "src changed to broken img, should be set to false");
   });
 
-  var img4 = document.getElementById("imgTestTag4");
-  img4.onload = img4.onerror = t2.step_func(
-    function(event){
+  img4.onload = img4.onerror = t2.step_func(function(event){
     assert_equals(event.type, "error");
-    assert_true(document.getElementById("imgTestTag4").complete);
+    assert_true(img4.complete);
     t2.done();
   });
 </script>
