Fix issues found by zcorpan.

--- a/dom/nodes/Document-contentType/contentType/contenttype_bmp.html
+++ b/dom/nodes/Document-contentType/contentType/contenttype_bmp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>BMP document.contentType === 'image/x-ms-bmp'</title>
+<title>BMP document.contentType === 'image/bmp'</title>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <iframe style="display:none"></iframe>
