Remove duplicate media.js
Was identical to /common/media.js

--- a/old-tests/submission/Microsoft/sandbox/iframe_sandbox_002.htm
+++ b/old-tests/submission/Microsoft/sandbox/iframe_sandbox_002.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>HTML5 video with autoplay attribute.</title>
-    <script type="text/javascript" src="../common/media.js"></script>
+    <script type="text/javascript" src="/common/media.js"></script>
 </head>
 <body>
     <script type="text/javascript">
