Rewrite relative paths to /common/media.js to absolute paths
This makes it easier to move tests and figure out where media.js is
when reading the tests.

--- a/html/semantics/embedded-content-0/media-elements/audio_loop_base.html
+++ b/html/semantics/embedded-content-0/media-elements/audio_loop_base.html
@@ -9,7 +9,7 @@
     <meta name=timeout content=long>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script src="../../../../common/media.js"></script>
+    <script src="/common/media.js"></script>
   </head>
   <body>
     <div id="log"></div>
