--- a/html/semantics/embedded-content-0/the-video-element/video_001.htm
+++ b/html/semantics/embedded-content-0/the-video-element/video_001.htm
@@ -8,7 +8,7 @@
     <meta name="assert" content="Media plays automatically when 'autoplay' is true." />
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script type="text/javascript" src="../../../../common/media.js"></script>
+    <script type="text/javascript" src="/common/media.js"></script>
     <script type="text/javascript">
       var videotest = async_test("Media plays automatically when 'autoplay' is true.");
       function do_playing(event) {
