--- a/html/semantics/embedded-content-0/the-video-element/video_015.htm
+++ b/html/semantics/embedded-content-0/the-video-element/video_015.htm
@@ -9,7 +9,7 @@
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
 
-    <script type="text/javascript" src="../../../../common/media.js"></script>
+    <script type="text/javascript" src="/common/media.js"></script>
     <script type="text/javascript">
       var test = async_test("'error' attribute returns 'null' when no error has occurred.")
       function do_loadstart(event) {
