--- a/html/semantics/embedded-content-0/the-video-element/video_019.htm
+++ b/html/semantics/embedded-content-0/the-video-element/video_019.htm
@@ -8,7 +8,7 @@
     <meta name="assert" content="removing the 'src' attribute does not invoke the media element load algorithm." />
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script type="text/javascript" src="../../../../common/media.js"></script>
+    <script type="text/javascript" src="/common/media.js"></script>
     <script type="text/javascript">
       var test = async_test("removing the 'src' attribute does not invoke the media element load algorithm.", {timeout:5000});
 
