--- a/html/semantics/embedded-content-0/the-video-element/video_020-manual.htm
+++ b/html/semantics/embedded-content-0/the-video-element/video_020-manual.htm
@@ -6,7 +6,7 @@
     <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
     <link rel="help" href="http://www.w3.org/TR/html5/embedded-content-0.html#video" />
     <meta name="assert" content="The 'video' element represents the frame at the current playback position when paused at an intermediate location after seeking." />
-    <script type="text/javascript" src="../../../../common/media.js"></script>
+    <script type="text/javascript" src="/common/media.js"></script>
     <script type="text/javascript">
 
       function getTestVideoElement()
