--- a/html/semantics/embedded-content-0/the-video-element/video_021-manual.htm
+++ b/html/semantics/embedded-content-0/the-video-element/video_021-manual.htm
@@ -6,7 +6,7 @@
   <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
   <link rel="help" href="http://www.w3.org/TR/html5/embedded-content-0.html#video" />
   <meta name="assert" content="The 'video' element is inaudible when 'muted' is false or 'volume' is zero." />
-  <script type="text/javascript" src="../../../../common/media.js"></script>
+  <script type="text/javascript" src="/common/media.js"></script>
   <script type="text/javascript">
   
   function do_play()
