--- a/html/semantics/embedded-content-0/media-elements/networkState_during_loadstart.html
+++ b/html/semantics/embedded-content-0/media-elements/networkState_during_loadstart.html
@@ -4,7 +4,7 @@
   <title>{audio,video}.networkState - NETWORK_LOADING</title>
   <script src="/resources/testharness.js"></script>
   <script src="/resources/testharnessreport.js"></script>
-  <script src="../../../../common/media.js"></script>
+  <script src="/common/media.js"></script>
  </head>
  <body>
   <p><a href="http://dev.w3.org/html5/spec/Overview.html#dom-media-networkstate">spec reference</a></p>
