--- a/html/semantics/embedded-content-0/the-video-element/video_loop_base.html
+++ b/html/semantics/embedded-content-0/the-video-element/video_loop_base.html
@@ -9,7 +9,7 @@
     <meta name=timeout content=long>
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
-    <script src="../../../../common/media.js"></script>
+    <script src="/common/media.js"></script>
   </head>
   <body>
     <div id="log"></div>
