--- a/html/semantics/embedded-content-0/media-elements/audio_003.htm
+++ b/html/semantics/embedded-content-0/media-elements/audio_003.htm
@@ -9,6 +9,47 @@
   <script type="text/javascript" src="/common/media.js"></script>
   <script type="text/javascript">
 
+var result_timeout = 0;
+
+//
+// Clear the result timeout so that the test will not automatically pass/fail
+//
+function clearResultTimeout()
+{
+    if (result_timeout != 0)
+    {
+        window.clearTimeout(result_timeout);
+        result_timeout = 0;
+    }
+}
+
+//
+// Passes the test
+//
+function passTest()
+{
+    document.getElementById("test_0_result").innerHTML = "PASS";
+    clearResultTimeout();
+}
+
+//
+// Fails the test
+//
+function failTest()
+{
+    document.getElementById("test_0_result").innerHTML = "FAIL";
+    clearResultTimeout();
+}
+
+//
+// Set the test to automatically fail after a timeout is reached
+//
+function setFailTimeout(milliseconds)
+{
+    clearResultTimeout();
+    result_timeout = window.setTimeout("failTest();", milliseconds);
+}
+
 setFailTimeout(30000);
 
 function do_playing(event)
