--- a/html/semantics/embedded-content-0/media-elements/audio_003.htm
+++ b/html/semantics/embedded-content-0/media-elements/audio_003.htm
@@ -1,78 +1,26 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-  <title>HTML5 Media Elements: Media plays automatically when 'autoplay' is true. (audio)</title>
-  <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-  <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
-  <link rel="help" href="http://www.w3.org/TR/html5/video.html#attr-media-autoplay" />
-  <meta name="assert" content="Media plays automatically when 'autoplay' is true. (audio)" />
-  <script type="text/javascript" src="/common/media.js"></script>
-  <script type="text/javascript">
+  <head>
+    <title>HTML5 Media Elements: Media plays automatically when 'autoplay' is true.</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <link rel="author" title="Microsoft" href="http://www.microsoft.com/" />
+    <link rel="help" href="http://www.w3.org/TR/html5/video.html#attr-media-autoplay" />
+    <meta name="assert" content="Media plays automatically when 'autoplay' is true." />
+    <script src="/resources/testharness.js"></script>
+    <script src="/resources/testharnessreport.js"></script>
+    <script type="text/javascript" src="/common/media.js"></script>
+    <script type="text/javascript">
+      var audiotest = async_test("Media plays automatically when 'autoplay' is true.");
+      function do_playing(event) {
+        audiotest.done();
+      }
 
-var result_timeout = 0;
-
-//
-// Clear the result timeout so that the test will not automatically pass/fail
-//
-function clearResultTimeout()
-{
-    if (result_timeout != 0)
-    {
-        window.clearTimeout(result_timeout);
-        result_timeout = 0;
-    }
-}
-
-//
-// Passes the test
-//
-function passTest()
-{
-    document.getElementById("test_0_result").innerHTML = "PASS";
-    clearResultTimeout();
-}
-
-//
-// Fails the test
-//
-function failTest()
-{
-    document.getElementById("test_0_result").innerHTML = "FAIL";
-    clearResultTimeout();
-}
-
-//
-// Set the test to automatically fail after a timeout is reached
-//
-function setFailTimeout(milliseconds)
-{
-    clearResultTimeout();
-    result_timeout = window.setTimeout("failTest();", milliseconds);
-}
-
-setFailTimeout(30000);
-
-function do_playing(event)
-{
-    passTest();
-}
-
-</script>
-</head>
-<body>
+    </script>
+  </head>
+  <body>
 <pre>
-Media plays automatically when 'autoplay' is true. (audio)
+Media plays automatically when 'autoplay' is true.
 </pre>
-<table id='testtable' border='1'>
-  <tr>
-    <td>Test Result</td>
-    <td>Test Assertion</td>
-  </tr>
-  <tr>
-    <td id='test_0_result'>Waiting ...</td>
-    <td id='test_0_assertion'>Test passes if the text 'PASS' appears to the left and the text 'Your browser does not support media elements.' does not appear anywhere on this page.</td>
-  </tr>
-</table>
 <pre>
 
 http://www.w3.org/TR/html5/video.html#attr-media-autoplay
@@ -83,20 +31,16 @@ automatically begin playback of the media resource as soon as it can do
 so without stopping.
 
 </pre>
-<div id='testcontent'>
+<div id='log'></div>
 
 <script type="text/javascript">
 
-document.write(
+  document.write(
     "<audio id='audio0' src='" + getAudioURI("/media/sound_5") + "'" +
-    " onplaying='do_playing(event);' autoplay>"
-    );
+    " onplaying='do_playing(event);' autoplay>Your browser does not support media elements.</audio>"
+  );
 
 </script>
-Your browser does not support media elements.
-</audio>
 
-
-</div>
 </body>
 </html>
