updated tests for new serialization rules

--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-inset-002.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Inset Valid Rounds</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#funcdef-inset">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
         <meta name="assert" content="An inset's radial component has 1 to 4 length/percentages, optionally followed by a '/' and an additional 1 to 4 length/percentages">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
@@ -26,14 +26,31 @@
                     return 'inset(10px round ' + value + ')';
                 }
 
+                function serializedInset(lhsValues, rhsValues) {
+                    return 'inset(10px 10px 10px 10px round ' + serialize(lhsValues.split(' ')) + ' / '+ serialize(rhsValues.split(' ')) +')';
+                }
+
+                function serialize(values) {
+                    var serializedValues = new Array();
+                    if(values.length == 1) {
+                        serializedValues = Array.apply(null, Array(4)).map(String.prototype.valueOf, values[0]);
+                    } else if (values.length == 2) {
+                        serializedValues = values.concat(values);
+                    } else if (values.length == 3) {
+                        serializedValues = values.concat([values[1]]);
+                    } else {
+                        serializedValues = values;
+                    }
+                    return serializedValues.join(' ');
+                }
 
                 var results = [], left, lhs, right, rhs;
                 for (left = 1; left <= 4; left++) {
                     lhs = sizes.slice(0, left).join(' ');
-                    results.push([units + ' ' + left + ' / 0 round', insetWrap(lhs)]);
+                    results.push([insetWrap(lhs), insetWrap(lhs), serializedInset(lhs, lhs)]);
                     for (right = 1; right <= 4; right++) {
                         rhs = sizes.slice(0, right).join(' ');
-                        results.push([units + ' ' + left + ' / ' + right + ' round', insetWrap(lhs + ' / ' + rhs)]);
+                        results.push([insetWrap(lhs + ' / ' + rhs), insetWrap(lhs + ' / ' + rhs), serializedInset(lhs, rhs)]);
                     }
                 }
                 return results;
