--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Polygon Valid Formats</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#funcdef-polygon">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-polygon">
         <meta name="assert" content="A polygonal basic shape has an optional fill-rule and one or more pairs of coordinates">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
@@ -15,9 +15,9 @@
         <div id="log"></div>
         <script type="text/javascript">
             generate_tests(ParsingUtils.testInlineStyle, [
-                ["Single point", "polygon(1px 2px)"],
+                ["Single point", "polygon(1px 2px)", "polygon(nonzero, 1px 2px)"],
                 ["Single point with fill-rule", "polygon(evenodd, 1px 2px)"],
-                ["Multiple points", "polygon(1px 2px, 3px 4px, 5px 6px)"],
+                ["Multiple points", "polygon(1px 2px, 3px 4px, 5px 6px)", "polygon(nonzero, 1px 2px, 3px 4px, 5px 6px)"],
                 ["Multiple points with fill-rule", "polygon(evenodd, 1px 2px, 3px 4px, 5px 6px)"]
             ]);
         </script>
