--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-002.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-polygon-002.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Polygon Valid Points</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#funcdef-polygon">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-polygon">
         <meta name="assert" content="A polygonal basic shape's points may be either lengths or percentages">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
@@ -15,9 +15,9 @@
         <div id="log"></div>
         <script type="text/javascript">
             generate_tests(ParsingUtils.testInlineStyle, [
-                ["Lengths", "polygon(1px 2px, 3px 4px, 5px 6px)"],
-                ["Percentages", "polygon(1% 2%, 3% 4%, 5% 6%)"],
-                ["Mixed Lengths and Percentages", "polygon(1px 2px, 3px 4%, 5% 6px, 7% 8%)"]
+                ["Lengths", "polygon(1px 2px, 3px 4px, 5px 6px)", "polygon(nonzero, 1px 2px, 3px 4px, 5px 6px)"],
+                ["Percentages", "polygon(1% 2%, 3% 4%, 5% 6%)", "polygon(nonzero, 1% 2%, 3% 4%, 5% 6%)"],
+                ["Mixed Lengths and Percentages", "polygon(1px 2px, 3px 4%, 5% 6px, 7% 8%)", "polygon(nonzero, 1px 2px, 3px 4%, 5% 6px, 7% 8%)"]
             ]);
         </script>
     </body>
