--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-notation-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-notation-000.html
@@ -4,8 +4,8 @@
         <title>Shape Outside Valid Basic Shape Functional Notation</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#typedef-basic-shape">
-        <link rel="help" href="http://dev.w3.org/csswg/cssom/#serializing-css-values">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
+        <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="Basic shapes use functional notation, and may contain optional whitespace inside the parentheses">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
