--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-box-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-box-000.html
@@ -4,12 +4,13 @@
         <title>Shape Outside Box Valid Values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#propdef-shape-outside">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
         <meta name="assert" content="Shape-outside may be one of the box model box values">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
         <script src="/resources/testharnessreport.js"></script>
         <script src="../resources/parsing-utils.js"></script>
+        <style src="/resources/testharness.css"></style>
     </head>
     <body>
         <div id="log"></div>
