--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-circle-001.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Circle Valid Radii</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#funcdef-circle">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
         <meta name="assert" content="A circle's radius may be a length, percentage, or keyword.">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
