--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-ellipse-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Ellipse Valid Formats</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#funcdef-ellipse">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
         <meta name="assert" content="An elliptical basic shape has two optional components, radii (2) and a position.">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
