--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-001.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-arguments-001.html
@@ -4,8 +4,8 @@
         <title>Shape Outside Shape Number Values</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#typedef-basic-shape">
-        <link rel="help" href="http://dev.w3.org/csswg/cssom/#serializing-css-values">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#typedef-basic-shape">
+        <link rel="help" href="http://www.w3.org/TR/cssom/#serializing-css-values">
         <meta name="assert" content="The basic shape can contain all valid number formats">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
