--- a/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-inherit-000.html
+++ b/contributors/adobe/submitted/shapes/shape-outside/values/shape-outside-shape-inherit-000.html
@@ -4,7 +4,7 @@
         <title>Shape Outside Box Initial Value</title>
         <link rel="author" title="Adobe" href="http://html.adobe.com/">
         <link rel="author" title="Bear Travis" href="mailto:betravis@adobe.com">
-        <link rel="help" href="http://dev.w3.org/csswg/css-shapes/#propdef-shape-outside">
+        <link rel="help" href="http://www.w3.org/TR/css-shapes/#shape-outside-property">
         <meta name="assert" content="Shape-outside takes its default value of auto when assigned the 'initial' value">
         <meta name="flags" content="DOM">
         <script src="/resources/testharness.js"></script>
