--- a/contributors/adobe/submitted/shapes/spec-examples/shape-outside-019.html
+++ b/contributors/adobe/submitted/shapes/spec-examples/shape-outside-019.html
@@ -8,10 +8,9 @@
     <link rel="match" href="reference/shape-outside-019-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test verifies that the content flows around the 
-                                 shape defined in the images alpha channel that has some
-                                 opacity."/>
+                                 shape defined in the images alpha channel and the shape-margin."/>
     <!-- This test is derived from Example 11 in this version of the spec:
-         TODO -->
+         http://www.w3.org/TR/2014/WD-css-shapes-1-20140211/ -->
     <style type="text/css">
         .container {
           position: absolute;
@@ -26,8 +25,8 @@
         }
         #image {
             float: left;
-            -webkit-shape-outside: url("support/circle-shadow.png");
-            -webkit-shape-margin: 20px;
+            shape-outside: url("support/circle-shadow.png");
+            shape-margin: 20px;
         }
         #margin-circle {
             position: absolute;
@@ -36,7 +35,7 @@
             width: 300px;
             height: 300px;
             background-color: black;
-            -webkit-clip-path: ellipse(115px, 100px, 140px, 130px);
+            clip-path: ellipse(115px, 100px, 140px, 130px);
             z-index: -1;
         }
         #failure {
