--- a/html-templates/template-element/node-document-changes.html
+++ b/html-templates/template-element/node-document-changes.html
@@ -21,7 +21,7 @@ test(function() {
     var template = doc1.createElement('template');
 
     assert_equals(template.ownerDocument, doc1, 'Wrong template node owner document');
-    assert_equals(template.content.ownerDocument, doc1,
+    assert_not_equals(template.content.ownerDocument, doc1,
             'Wrong template content owner document');
 
     var doc2 = newHTMLDocument();
@@ -45,7 +45,7 @@ test(function() {
 
     assert_equals(template.ownerDocument, doc1,
             'Wrong template node owner document');
-    assert_equals(template.content.ownerDocument, doc1,
+    assert_not_equals(template.content.ownerDocument, doc1,
             'Wrong template content owner document');
 
     var doc2 = newHTMLDocument();
@@ -75,14 +75,14 @@ test(function() {
     var template = doc1.querySelector('#tmpl');
 
     assert_equals(template.ownerDocument, doc1, 'Wrong template node owner document');
-    assert_equals(template.content.ownerDocument, doc1,
+    assert_not_equals(template.content.ownerDocument, doc1,
             'Wrong template content owner document');
 
     var nestedTemplate = template.content.querySelector('#tmpl2');
 
-    assert_equals(nestedTemplate.ownerDocument, doc1,
+    assert_equals(nestedTemplate.ownerDocument, template.content.ownerDocument,
             'Wrong nested template node owner document');
-    assert_equals(nestedTemplate.content.ownerDocument, doc1,
+    assert_equals(nestedTemplate.content.ownerDocument, template.content.ownerDocument,
             'Wrong nested template content owner document');
 
     var doc2 = newHTMLDocument();
