updated ttwf shapes tests for new syntax

--- a/contributors/ttwf_shenzhen/css-shapes/biqing/submitted/shape-outside-invalid-circle-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/biqing/submitted/shape-outside-invalid-circle-001.html
@@ -4,6 +4,7 @@
     <title>CSS Shapes Tests: Circle - invalid r values</title>
     <link rel="author" title="biqing" href="biqing.kwok@qq.com">
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
+    <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="stylesheet" href="/resources/testharness.css">
@@ -16,13 +17,13 @@
         height: 100px;
     }
     #circle1 {
-        shape-outside: circle(50px, 50px, auto);
+        shape-outside: circle(auto);
     }
     #circle2 {
-        shape-outside: circle(50px, 50px, inherit);
+        shape-outside: circle(inherit);
     }
     #circle3 {
-        shape-outside: circle(50px, 50px, #FFFFFF);
+        shape-outside: circle(#FFFFFF);
     }
     </style>
 </head>
@@ -36,9 +37,9 @@
     <script>
 
     test(function() {
-        assert_true(getComputedStyle(document.getElementById('circle1')).shapeOutside == 'auto');
-        assert_true(getComputedStyle(document.getElementById('circle2')).shapeOutside == 'auto');
-        assert_true(getComputedStyle(document.getElementById('circle3')).shapeOutside == 'auto');
+        assert_true(getComputedStyle(document.getElementById('circle1')).shapeOutside == 'none');
+        assert_true(getComputedStyle(document.getElementById('circle2')).shapeOutside == 'none');
+        assert_true(getComputedStyle(document.getElementById('circle3')).shapeOutside == 'none');
     }, 'Circle - invalid r values');
 
     </script>
