--- a/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-001.html
@@ -16,7 +16,7 @@
 #shape{
 	width: 300px;
 	height: 300px;
-	shape-outside: invalid(50px,50px,50px,50px);
+	: invalid(50px,50px,50px,50px);
 }
 	</style>
 </head>
@@ -29,7 +29,7 @@
 	<script>
 	var obj = document.getElementById('shape');
 	var shapeOutside = getComputedStyle(obj).shapeOutside;
-	test(function() {assert_equals(shapeOutside, "auto", "declaration should be Invalid")});
+	test(function() {assert_equals(shapeOutside, "none", "declaration should be Invalid")});
 	</script>
 
 </body>
