--- a/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-circle-002.html
+++ b/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-circle-002.html
@@ -8,6 +8,7 @@
 	<link rel="author" title="noonnightstorm" href="mailto:noonnightstorm@gmail.com">
 	<link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com">
 	<link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
+	<link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-circle">
 	<script src="/resources/testharness.js"></script>
 	<script src="/resources/testharnessreport.js"></script>
 	<link rel="stylesheet" href="/resources/testharness.css">
@@ -16,7 +17,7 @@
 #shape{
 	width: 300px;
 	height: 300px;
-	shape-outside: circle(50%, 50, 50%);
+	shape-outside: circle(50% at 50% 50);
 }
 	</style>
 </head>
@@ -29,7 +30,7 @@
 	<script>
 	var obj = document.getElementById('shape');
 	var cy = getComputedStyle(obj).shapeOutside;
-	test(function() {assert_equals(cy, "auto", "declaration should be Invalid")});
+	test(function() {assert_equals(cy, "none", "declaration should be Invalid")});
 	</script>
 
 </body>
