--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-ellipse-001.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="flags" content="dom">
-    <meta name="assert" content="shape-outside declaration is invalid if ellipse shape function has only two invalid arguments">
+    <meta name="assert" content="shape-outside declaration is invalid if ellipse shape function has two invalid arguments">
     <title>CSS Shapes Test: Ellipse - invalid 2 arg</title>
     <link rel="author" title="Sherlock Zhong" href="mailto:sherlock.z0917@gmail.com">
     <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 11-09-2013 TestTWF Shenzhen -->
     <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
+    <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-ellipse">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="stylesheet" href="/resources/testharness.css">
@@ -15,7 +16,7 @@
 #shape{
     width: 300px;
     height: 300px;
-    shape-outside: ellipse(50px, 50px);
+    shape-outside: ellipse(50, 50);
 }
     </style>
 </head>
@@ -28,7 +29,7 @@
     <script>
     var obj = document.getElementById('shape');
     var val = getComputedStyle(obj).shapeOutside;
-    test(function() {assert_equals(val, "auto", "declaration should not be valid")});
+    test(function() {assert_equals(val, "none", "declaration should not be valid")});
     </script>
 
 </body>
