--- a/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-inset-004.html
+++ b/contributors/ttwf_shenzhen/css-shapes/sherlock/submitted/shape-outside-invalid-inset-004.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="flags" content="dom">
-    <meta name="assert" content="shape-outside declaration is invalid if inset-rectangle shape function has an invalid right param">
-    <title>CSS Shapes Test: Inset Rectangles - invalid right</title>
+    <meta name="assert" content="shape-outside declaration is invalid if inset shape function has an invalid left param">
+    <title>CSS Shapes Test: Inset Rectangles - invalid left param</title>
     <link rel="author" title="Sherlock Zhong" href="mailto:sherlock.z0917@gmail.com">
-    <link rel="reviewer" title="Alan Stearns" href="mailto:stearns@adobe.com"> <!-- 11-09-2013 TestTWF Shenzhen -->
-    <link rel="help" href="http://www.w3.org/TR/css-shapes-1/#supported-basic-shapes">
+    <link rel="help" href="http://www.w3.org/TR/css-shapes/#supported-basic-shapes">
+    <link rel="help" href="http://www.w3.org/TR/css-shapes/#funcdef-inset">
     <script src="/resources/testharness.js"></script>
     <script src="/resources/testharnessreport.js"></script>
     <link rel="stylesheet" href="/resources/testharness.css">
@@ -15,7 +15,7 @@
 #shape{
     width: 300px;
     height: 300px;
-    shape-outside: inset-rectangle(-50px, -50, 50px, 50px);
+    shape-outside: inset(50px 50px 50px 50);
 }
     </style>
 </head>
@@ -28,7 +28,7 @@
     <script>
     var obj = document.getElementById('shape');
     var val = getComputedStyle(obj).shapeOutside;
-    test(function() {assert_equals(val, "auto", "declaration should not be valid")});
+    test(function() {assert_equals(val, "none", "declaration should not be valid")});
     </script>
 
 </body>
