fixed a search/replace error

--- a/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-001.html
+++ b/contributors/ttwf_shenzhen/css-shapes/noonnightstorm/submitted/shape-outside-invalid-001.html
@@ -16,7 +16,7 @@
 #shape{
 	width: 300px;
 	height: 300px;
-	: invalid(50px,50px,50px,50px);
+	shape-outside: invalid(50px,50px,50px,50px);
 }
 	</style>
 </head>
