--- a/html/browsers/windows/browsing-context-names/parent2.html
+++ b/html/browsers/windows/browsing-context-names/parent2.html
@@ -4,6 +4,6 @@
 <link rel="author" title="Intel" href="http://www.intel.com/">
 <script>
 
-var win = window.open("message.html", "_parent");
+window.open("message.html", "_parent");
 
 </script>
