--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-scroll.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-scroll.html
@@ -11,7 +11,7 @@
         <link rel="match" href="reference/mix-blend-mode-parent-element-overflow-scroll-ref.html">
         <style type="text/css">
             .parent {
-                background: aqua;/*rgb(0,255,255);*/
+                background: yellow;
                 width: 140px;
                 height: 140px;
                 position: relative;
@@ -19,15 +19,15 @@
                 overflow:scroll;
             }
             .blended {
-                background: red;/*rgb(255,0,0);*/
+                background: red;
                 width: 200px;
                 height: 200px;
-                mix-blend-mode: multiply;
+                mix-blend-mode: difference;
             }
         </style>
     </head>
     <body>
-        <p>Test passes if you see a scrollable black rectangle.</p>
+        <p>Test passes if you see a scrollable lime rectangle.</p>
         <div class="parent">
             <div class="blended"></div>
         </div>
