--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-scroll-blended-position-fixed.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-element-overflow-scroll-blended-position-fixed.html
@@ -34,9 +34,8 @@
         </style>
     </head>
     <body>
-        <p>Test passes if you see a blue square inside a bigger aqua container. <br>
-        The aqua container should have scrollbars on the left and bottom. <br>
-        If you scroll, the blue square will not change its position.</p>
+        <p>Test passes if you see a blue square inside an aqua container. <br>
+        The aqua container should have scrollbars on the left and bottom.</p>
         <div class="parent">
             <div class="blended"></div>
             <div class="scrollableContent"></div>
