--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-parent-with-3D-transform-and-transition.html
@@ -10,35 +10,55 @@
         <meta name="assert" content="Test checks that an element having mix-blend-mode blends with its parent element having 3D transform and transition">
         <style type="text/css">
             .parent {
-                background: aqua;/*rgb(0,255,255);*/
+                background: yellow;
                 width: 140px;
                 height: 140px;
-                padding-top: 1px;
                 position:relative;
                 z-index: 1;
+                margin: 10px;
+                float: left;
                 transition: transform 2s;
 
             }
-            .parent:hover {
-                transform: rotateX(40deg);
+            .rotated {
+                transform: rotateX(60deg) rotateZ(10deg) rotateY(180deg);
             }
             .blended {
-                background: fuchsia;/*rgb(255,0,255);*/
-                margin-top: 20px;
-                margin-left: 20px;
-                width: 200px;
-                height: 200px;
+                background: red;
+                width: 140px;
+                height: 140px;
                 mix-blend-mode: difference;
-                }
+            }
+            .ref {
+                background: none;
+            }
+            .ref .blended {
+                background: lime;
+                mix-blend-mode: normal;
+            }
         </style>
     </head>
     <body>
-        <p>You should see 2 partially overlapping squares having fuchsia and aqua colors.<br>
-            The intersection of these 2 squares should be yellow. <br>
-            When you hover over the squares, they will rotate, without colors being changed.
-        </p>
-        <div class="parent">
-            <div class="blended"></div>
+        <p>Test passes if you can see two rotating lime rectangles, both identical.</p>
+        <div>
+            <div class="parent" id="parent">
+                <div class="blended"></div>
+            </div>
+            <div class="parent ref" id="parentref">
+                <div class="blended"></div>
+            </div>
         </div>
+        <script type="text/javascript">
+            var parent = document.getElementById('parent');
+            var parentref = document.getElementById('parentref');
+             function rotate (el, cl) {
+                if (el.className === cl + ' rotated')
+                    el.className = cl;
+                else
+                    el.className = cl + ' rotated';
+            }
+            setTimeout(function () { rotate(parent, 'parent'); rotate(parentref, 'parent ref'); }, 0);
+            setInterval(function () { rotate(parent, 'parent'); rotate(parentref, 'parent ref'); }, 2000);
+        </script>
     </body>
 </html>
