--- a/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform-and-transition.html
+++ b/contributors/adobe/submitted/css-compositing/mix-blend-mode/mix-blend-mode-sibling-with-3D-transform-and-transition.html
@@ -13,34 +13,64 @@
             .parent {
                 position: relative;
                 z-index: 1;
+                float: left;
+                margin-left: 10px;
             }
             .blended {
-                background: fuchsia;/*rgb(255,0,255);*/
-                margin-top: -200px;
-                margin-left: 20px;
-                width: 100px;
-                height: 100px;
+                background: blue;
+                margin-top: -120px;
+                width: 140px;
+                position: relative;
+                z-index: 1;
+                height: 140px;
                 mix-blend-mode: difference;
             }
             .siblingOfBlended {
-                background: red;/*rgb(255,0,0);*/
+                background: aqua;
+                width: 100px;
+                height: 100px;
                 margin-top: 20px;
                 margin-left: 20px;
-                width: 200px;
-                height: 200px;
                 transition: transform 2s;
             }
-            .siblingOfBlended:hover {
-                transform: rotateX(40deg);
+            .rotated {
+                transform: rotateX(60deg) rotateY(10deg) rotateZ(90deg);
+            }
+
+            .ref .blended {
+                mix-blend-mode: normal;
+            }
+            .ref .siblingOfBlended {
+                z-index: 2;
+                position: relative;
+                background: lime;
             }
         </style>
     </head>
     <body>
-        <p>You should see 2 squares: a blue small square in a red container.<br>
-        When you move the mouse over the red square, it will get rotated and you should see the real color of the uncovered part of the blue rectangle - fuchsia, while the rotated scene should not change the colors.</p>
-        <div class="parent">
-            <div class="siblingOfBlended"></div>
-            <div class="blended"></div>
+        <p>Test passes if you can see two blue rectangles having inside a lime rotating rectangle each.<br>
+        Lime rectangles should look identical when while rotating.</p>
+        <div>
+            <div class="parent">
+                <div class="siblingOfBlended" id="sibling"></div>
+                <div class="blended"></div>
+            </div>
+            <div class="parent ref">
+                <div class="siblingOfBlended ref" id="siblingref"></div>
+                <div class="blended"></div>
+            </div>
         </div>
+        <script type="text/javascript">
+            var sibling = document.getElementById('sibling');
+            var siblingref = document.getElementById('siblingref');
+            function rotate (el, cl) {
+                if (el.className === cl + ' rotated')
+                    el.className = cl;
+                else
+                    el.className = cl + ' rotated';
+            }
+            setTimeout(function () { rotate(sibling, 'siblingOfBlended'); rotate(siblingref, 'siblingOfBlended ref'); }, 0);
+            setInterval(function () { rotate(sibling, 'siblingOfBlended'); rotate(siblingref, 'siblingOfBlended ref'); }, 2000);
+        </script>
     </body>
 </html>
